@@ -5,7 +5,7 @@
 
 <!-- This file contains a discussion of the host architecture -->
 <!-- in the jEdit Plugin API                                  -->
-<!-- $Id: host-design.xml,v 1.2 2001/11/13 15:11:42 jgellene Exp $
+<!-- $Id: host-design.xml,v 1.3 2001/11/24 09:45:13 spestov Exp $
 -->
 
 <chapter id="host-design"><title>jEdit as a Plugin Host</title>
@@ -295,7 +295,7 @@ The Role of the View Object</title>
   <classname>EditPlugin</classname>, this method is an empty
   <quote>no-op</quote>.  In order to add items to jEdit's menu bar
   under the <guilabel>Plugins</guilabel> heading, the plugin core class
-  supplies its own version of function>createMenuItems()</function>.
+  supplies its own version of <function>createMenuItems()</function>.
   As we will explain in the next chapter,
   the typical plugin, instead of creating Java
   <classname>JMenu</classname> and <classname>JMenuItem</classname>
